--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hono/node-server": "latest",
     "@ngrok/ngrok": "^1.1.0",
+    "dotenv": "^16.4.5",
     "frog": "latest",
     "hono": "^4"
   },
